fixed input number type from displaying inner arrows on firefox

--- a/projects/vanguardpokedex/team_builder.scss
+++ b/projects/vanguardpokedex/team_builder.scss
@@ -1136,6 +1136,10 @@ body:has(.modal-open) {
     appearance: none;
 }
 
+input[type=number], .number-input {
+    -moz-appearance:textfield;
+}
+
 //
 // Media queries
 //
